Added first Blog post

--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,6 @@ title: "Matt Solone"
 
 ## About me
 
-![ ](/Users/mattsolone/Documents/School/Spring 2022/MATH 485/IMG_1850.png)
+![ ](/Users/mattsolone/Documents/School/Spring 2022/MATH 485/IMG_6633.jpeg)
 
 Hello all, my name is Matthew Solone. I am currently a second semester Junior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. Ultimately I want to pursue a career as a Data Scientist and I am on my way. For summer 2022 I will be joining Avanade as a Data Engineering intern which I am super excited to learn the real world applications of my studies. In my free time you can find my in the gym or out on the links playing golf with my friends. I love to be outside and enjoy the wilderness so recently I have taken up more serious hiking and trail running. To find more techical interests check out the blog tab!
