--- a/pgapost.Rmd
+++ b/pgapost.Rmd
@@ -45,6 +45,8 @@ From these statistics I believe we can accurately predict a players ability to m
 * First lets look at some simple plots of our data and tidy it up a bit. Also remember to load in the librarys we will be using.
 ```{r, eval=FALSE}
 library(tidymodels) 
+library(tidyverse)
+library(tidyr)
 library(readr)
 library(broom.mixed)
 library(ISLR2)
@@ -52,26 +54,27 @@ library(discrim)
 library(corrplot)
 library(stargazer)
 library(discrim)
-library(caret)
 ```
 
 
 * Fitting our model 
 ```{r}
+library(parsnip)
 pga_raw$made_cut <- factor(pga_raw$made_cut)
 
-pga_fit <- logistic_reg() %>% set_engine("glm") %>% set_mode("classification") %>% fit(made_cut ~ sg_putt + sg_arg + sg_app + sg_ott + sg_t2g , data = pga_raw)
+pga_fit <- logistic_reg() %>% set_engine("glm") %>% set_mode("classification") %>% fit(made_cut ~ sg_putt + sg_app + sg_ott , data = pga_raw)
 
 tidy(pga_fit)
 ```
-* From our initial logistic fit we can see that all of the strokes gained statistics are statistically significant. 
+* From our initial logistic fit we can see that using the three main strokes gained statistics are all statistically significant and can be used in predictions. 
 
 * From here we can predict the outcome and visualize using a confusion matrix.
 
 ```{r}
+library(caret)
 pred_log <- predict(pga_fit, pga_raw)
 
 confusionMatrix(pga_raw$made_cut,pred_log$.pred_class)
 ```
 
-* The confusion matrix shows a a true positive rate of 0.7822 and a true negative rate of 0.7834 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 78.29% of the time. We correctly predicted making the cut about 83.55% of the time in and correctly predicted not making the cut 71.88 % of the time. 
+* The confusion matrix shows a a true positive rate of 0.7636 and a true negative rate of 0.7632 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 76.33% of the time. We correctly predicted making the cut about 82.48% of the time in and correctly predicted not making the cut 68.85 % of the time. 
