--- a/pgapost.Rmd
+++ b/pgapost.Rmd
@@ -2,7 +2,9 @@
 title: "PGA Data Analysis"
 author: "Matthew Solone"
 date: "5/7/2022"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
