--- a/pgapost.Rmd
+++ b/pgapost.Rmd
@@ -18,7 +18,10 @@ pga_c <- pga_raw[, -c(4:24)]
 
 ```
 
-Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game.
+### Problem Statement
+Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game. In this blog I believe we can accurately predict a players ability to make the cut, 'made_cut`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.
+
+### Data Gathering
 
 In this post I will go over some simple analytics used to evaluating and predicting performance of the top players in the PGA. I have obtained the raw data from this website; (https://www.advancedsportsanalytics.com/pga-user-guides/#pga-optimizer-app)
 
@@ -32,19 +35,17 @@ If he three-putts, he loses 1.5 strokes.
 
 There are more SG stats as well: 
 
-"The new strokes gained statistics, which were introduced June 1, 2016, break down tee-to-green play into three categories: off-the-tee, approach-the-green and around-the-green. The sum of those three statistics equals strokes gained is tee-to-green.
+The new strokes gained statistics, which were introduced June 1, 2016, break down tee-to-green play into three categories: off-the-tee, approach-the-green and around-the-green. The sum of those three statistics equals strokes gained is tee-to-green.
 
-Off-the-tee + approach-the-green + around-the-green + putting = strokes gained: total
+* Off-the-tee + approach-the-green + around-the-green + putting = strokes gained: total
 
-Strokes Gained: Off-the-Tee measures player performance off the tee on all par-4s and par-5s.
+* Strokes Gained: Off-the-Tee measures player performance off the tee on all par-4s and par-5s.
 
-Strokes Gained: Approach-the-Green measures player performance on approach shots. Approach shots include all shots that are not from the tee on par-4 and par-5 holes and are not included in strokes gained: around-the-green and strokes gained: putting. Approach shots include tee shots on par-3s.
+* Strokes Gained: Approach-the-Green measures player performance on approach shots. Approach shots include all shots that are not from the tee on par-4 and par-5 holes and are not included in strokes gained: around-the-green and strokes gained: putting. Approach shots include tee shots on par-3s.
 
-Strokes Gained: Around-the-Green measures player performance on any shot within 30 yards of the edge of the green. This statistic does not include any shots taken on the putting green"
+* Strokes Gained: Around-the-Green measures player performance on any shot within 30 yards of the edge of the green. This statistic does not include any shots taken on the putting green"
 
-From these statistics I believe we can accurately predict a players ability to make the cut, 'made_cut`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.
-
-* First lets look at some simple plots of our data and tidy it up a bit. Also remember to load in the librarys we will be using.
+* First lets look at some simple plots of our data and tidy it up a bit. Also remember to load in the library's we will be using.
 ```{r, eval=FALSE}
 library(tidymodels) 
 library(tidyverse)
@@ -58,6 +59,7 @@ library(stargazer)
 library(discrim)
 ```
 
+### Data Cleaning and Data Modeling
 
 * Fitting our model 
 ```{r}
@@ -79,12 +81,14 @@ pred_log <- predict(pga_fit, pga_raw)
 confusionMatrix(pga_raw$made_cut,pred_log$.pred_class)
 ```
 
+### Conclusion
+
 * The confusion matrix shows a a true positive rate of 0.7636 and a true negative rate of 0.7632 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 76.33% of the time. We correctly predicted making the cut about 82.48% of the time in and correctly predicted not making the cut 68.85 % of the time. 
 
 
 Bio - 
 
-My name is Matthew Solonem, I am currently an incming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better buisiness decisions.
+My name is Matthew Solone, I am currently an incoming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better business decisions.
 
 LinkedIn - https://www.linkedin.com/in/matthewsolone/
 
