--- a/pgapost.Rmd
+++ b/pgapost.Rmd
@@ -20,7 +20,7 @@ pga_c <- pga_raw[, -c(4:24)]
 
 ### Problem Statement
 
-Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game. In this blog I believe we can accurately predict a players ability to make the cut, 'made_cut\`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.
+Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game. In this blog I to see if we can accurately predict a players ability to make the cut, 'made_cut\`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.
 
 ### Data Gathering
 
@@ -85,7 +85,7 @@ confusionMatrix(pga_raw$made_cut,pred_log$.pred_class)
 
 -   The confusion matrix shows a a true positive rate of 0.7636 and a true negative rate of 0.7632 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 76.33% of the time. We correctly predicted making the cut about 82.48% of the time in and correctly predicted not making the cut 68.85 % of the time.
 
-Bio -
+### About the author -
 
 My name is Matthew Solone, I am currently an incoming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better business decisions.
 
